Bug 302350 - Gwenview crash at some jpg files(no problem with kolourpaint)
Summary: Gwenview crash at some jpg files(no problem with kolourpaint)
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.7
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 302313 305298 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-22 15:08 UTC by godfrey.public
Modified: 2012-10-19 13:26 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Volume 1 (1000.00 KB, application/x-rar)
2012-06-22 15:24 UTC, godfrey.public
Details
Volume 2 (308.43 KB, application/x-rar)
2012-06-22 15:24 UTC, godfrey.public
Details

Note You need to log in before you can comment on or make changes to this bug.
Description godfrey.public 2012-06-22 15:08:23 UTC
KDE:4.8.3

Application: Gwenview (gwenview), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f741ecfa760 (LWP 32526))]

Thread 3 (Thread 0x7f7409fdb700 (LWP 32570)):
#0  0x00007f741b6f6a93 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f74182444d4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f74182445f4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f741db5e2e6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f741db2e92f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f741db2ebb8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f741da31d70 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f741db0f23f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f741da34d0b in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f7418903b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007f741b7016dd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f7402e0f700 (LWP 32653)):
#0  0x00007f741890864b in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f741da35167 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007f741da287af in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007f741da34d0b in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f7418903b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#5  0x00007f741b7016dd in clone () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f741ecfa760 (LWP 32526)):
[KCrash Handler]
#5  0x00007f741b65b475 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x00007f741b65e6f0 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007f741ba1568d in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#8  0x00007f741ba13796 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#9  0x00007f741ba137c3 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#10 0x00007f741ba13a36 in __cxa_rethrow () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#11 0x00007f741db2ee24 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#12 0x00007f741db33d78 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#13 0x0000000000426115 in ?? ()
#14 0x00007f741b647ead in __libc_start_main () from /lib/x86_64-linux-gnu/libc.so.6
#15 0x00000000004263c1 in _start ()


Reproducible: Always

Steps to Reproduce:
1.Just open the attached file
Comment 1 godfrey.public 2012-06-22 15:12:04 UTC
The file is too big to upload here so i will send the file via e-mail on request
Comment 2 godfrey.public 2012-06-22 15:24:25 UTC
Created attachment 72043 [details]
Volume 1
Comment 3 godfrey.public 2012-06-22 15:24:54 UTC
Created attachment 72044 [details]
Volume 2
Comment 4 godfrey.public 2012-06-22 15:25:56 UTC
Download the two rar files to one directory and extract there then you will see the jpg file
Comment 5 Jekyll Wu 2012-06-22 17:09:42 UTC
Can reproduce it using Debian Unstable. Running gwenview in gdb I get this:

    Qt has caught an exception thrown from an event handler. Throwing
    exceptions from an event handler is not supported in Qt. You must
    reimplement QApplication::notify() and catch all exceptions there.

    terminate called after throwing an instance of 'Exiv2::BasicError<char>'
    what():  No namespace info available for XMP prefix `xmpGImg'
Comment 6 Benni Hill 2012-06-25 14:38:54 UTC
No crash here with KDE 4.8.4 and exiv2 0.22. Image displays.
Comment 7 Aurelien Gateau 2012-06-26 12:47:20 UTC
Git commit 05511b41913904c36bfd2cccc888ac4c466784f1 by Aurélien Gâteau.
Committed on 26/06/2012 at 14:36.
Pushed by gateau into branch 'KDE/4.9'.

Catch exceptions from Exiv2 when gathering meta info

Since Exiv2 0.23, ExifDatum::tagLabel() can throw

M  +1    -0    lib/CMakeLists.txt
M  +3    -1    lib/exiv2imageloader.h
M  +18   -15   lib/imagemetainfomodel.cpp
M  +1    -0    tests/auto/CMakeLists.txt
A  +58   -0    tests/auto/imagemetainfomodeltest.cpp     [License: GPL]
A  +38   -0    tests/auto/imagemetainfomodeltest.h     [License: GPL]
A  +-    --    tests/data/302350_exiv_0.23_exception.jpg

http://commits.kde.org/gwenview/05511b41913904c36bfd2cccc888ac4c466784f1
Comment 8 Aurelien Gateau 2012-06-29 08:08:25 UTC
*** Bug 302313 has been marked as a duplicate of this bug. ***
Comment 9 Aurelien Gateau 2012-07-08 08:02:30 UTC
Git commit ba9fde1029f3b7280c0014d585aaa55639fd247a by Aurélien Gâteau.
Committed on 26/06/2012 at 14:36.
Pushed by gateau into branch 'KDE/4.8'.

Catch exceptions from Exiv2 when gathering meta info

Since Exiv2 0.23, ExifDatum::tagLabel() can throw

M  +1    -0    lib/CMakeLists.txt
M  +3    -1    lib/exiv2imageloader.h
M  +18   -15   lib/imagemetainfomodel.cpp
M  +1    -0    tests/auto/CMakeLists.txt
A  +58   -0    tests/auto/imagemetainfomodeltest.cpp     [License: GPL]
A  +38   -0    tests/auto/imagemetainfomodeltest.h     [License: GPL]
A  +-    --    tests/data/302350_exiv_0.23_exception.jpg

http://commits.kde.org/gwenview/ba9fde1029f3b7280c0014d585aaa55639fd247a
Comment 10 Aurelien Gateau 2012-10-06 09:57:55 UTC
*** Bug 305298 has been marked as a duplicate of this bug. ***