Catch exceptions from Exiv2 when gathering meta info

Since Exiv2 0.23, ExifDatum::tagLabel() can throw

BUG: 302350